--- a/Homeworks/HW_1/HW_1_5/index.html
+++ b/Homeworks/HW_1/HW_1_5/index.html
@@ -11,13 +11,13 @@
 <body>
 <h1>Головні актори фільму "Бетмен" (2022)</h1>
 <p style = "margin-left: 20%">
-  <img src = "images/robert-pattinson.jpg" alt = "Robert Pattison" style = "width: 90%"> <span> <i>Роберт Паттісон, бетмен</i> </span>
+  <img src = "images/Robert_Pattison.webp" alt = "Robert Pattison" style = "width: 90%; height: 90%"> <span> <i>Роберт Паттісон, бетмен</i> </span>
 </p>
 <p style = "margin-left: 3%">
-  <img src = "images/Zoe_Kravitz_2020.jpg" alt = "Zoe Kravitz" style = "width: 90%"> <br> <i><span> Зої Кравіц, Селіна Кайл </span></i>
+  <img src = "images/Zoe_Kravitz.jpg" alt = "Zoe Kravitz" style = "width: 90%"> <br> <i><span> Зої Кравіц, Селіна Кайл </span></i>
 </p>
 <p style = "margin-left: 3%">
-  <img src = "images/Paul_Dano.jfif" alt = "Paul Dano" style = "width: 87%"> <i><span> Пол Дано, загадник </span></i>
+  <img src = "images/Paul_Dano.jpg" alt = "Paul Dano" style = "width: 90%"> <i><span> Пол Дано, загадник </span></i>
 </p>
 </body>
 </html>
