--- a/Homeworks/HW_4/HW_4_1/index.html
+++ b/Homeworks/HW_4/HW_4_1/index.html
@@ -13,8 +13,8 @@
 <main>
     <aside></aside>
     <div class = "main-section">
-        <section class = "main-section-top"></section>
-        <section class = "main-section-bottom"></section>
+        <section class = "main-top-section"></section>
+        <section class = "main-bottom-section"></section>
     </div>
     <aside></aside>
 </main>
