--- a/Homeworks/HW_7/HW_7_1/index.html
+++ b/Homeworks/HW_7/HW_7_1/index.html
@@ -9,21 +9,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="block-1">
+    <div class="card-1">
         <div class = "logo">
             <img src = "img/Ds3%20Tool.png" alt = "DS3 Tool">
         </div>
         <h3>Lorem</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </div>
-    <div class="block-2">
+    <div class="card-2">
         <div class = "logo">
             <img src = "img/Chessboard.png" alt = "Chessboard">
         </div>
         <h3>Lorem</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </div>
-    <div class="block-3">
+    <div class="card-3">
         <div class = "logo">
             <img src = "img/Battle.png" alt = "Battle">
         </div>
